# CNN_parallel

./: Helpers.h  README.md
CUDA_MNIST_NUMBER/: CMakeLists.txt  layer_c.h  main.cu
CUDA_MNIST_NUMBER_full_pipeline/: README.md  cnn_cuda  information.MD  layer.cu  main.cu  test_real  test_real.cu
Convolution_CPU-GPU/: ConvolutionalLayer.h  guide.MD  kernel.cu
Openmp/: CMakeLists.txt  Main.cpp  cnn_openmp
only_Convolution_CPU-GPU_compare/: CMakeLists.txt
